utoipa-gen/tests/snapshots/path_response_derive_test__derive_http_status_code_responses.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
expression: responses
snapshot_kind: text
---
{
  "200": {
    "description": "success"
  },
  "404": {
    "description": "not found"
  }
}
