utoipa-gen/tests/snapshots/path_response_derive_test__derive_path_with_multiple_examples_auto_collect_schemas-2.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 351
expression: responses
---
{
  "200": {
    "content": {
      "application/json": {
        "examples": {
          "Demo": {
            "description": "Long description",
            "summary": "This is summary",
            "value": {
              "name": "Demo"
            }
          },
          "John": {
            "summary": "Another user",
            "value": {
              "name": "John"
            }
          }
        },
        "schema": {
          "$ref": "#/components/schemas/User"
        }
      }
    }
  }
}
