utoipa-gen/tests/snapshots/path_response_derive_test__derive_path_with_multiple_examples_auto_collect_schemas.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
expression: schemas
snapshot_kind: text
---
{
  "User": {
    "properties": {
      "name": {
        "type": "string"
      }
    },
    "required": [
      "name"
    ],
    "type": "object"
  }
}
