utoipa-gen/tests/snapshots/path_response_derive_test__derive_path_with_multiple_responses_via_content_attribute_auto_collect_responses-2.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 313
expression: responses
---
{
  "200": {
    "content": {
      "application/vnd.user.v1+json": {
        "example": {
          "id": "id"
        },
        "schema": {
          "$ref": "#/components/schemas/User"
        }
      },
      "application/vnd.user.v2+json": {
        "example": {
          "id": 2
        },
        "schema": {
          "$ref": "#/components/schemas/User2"
        }
      }
    }
  }
}
