utoipa-gen/tests/snapshots/path_response_derive_test__derive_path_with_multiple_responses_via_content_attribute_auto_collect_responses.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
expression: schemas
snapshot_kind: text
---
{
  "User": {
    "properties": {
      "id": {
        "type": "string"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  },
  "User2": {
    "properties": {
      "id": {
        "format": "int32",
        "type": "integer"
      }
    },
    "required": [
      "id"
    ],
    "type": "object"
  }
}
