utoipa-gen/tests/snapshots/path_response_derive_test__derive_path_with_multiple_responses_with_multiple_examples.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 398
expression: responses
---
{
  "200": {
    "content": {
      "application/vnd.user.v1+json": {
        "examples": {
          "StringUser": {
            "value": {
              "id": "1"
            }
          },
          "StringUser2": {
            "value": {
              "id": "2"
            }
          }
        },
        "schema": {
          "$ref": "#/components/schemas/User"
        }
      },
      "application/vnd.user.v2+json": {
        "examples": {
          "IntUser": {
            "value": {
              "id": 1
            }
          },
          "IntUser2": {
            "value": {
              "id": 2
            }
          }
        },
        "schema": {
          "$ref": "#/components/schemas/User2"
        }
      }
    }
  }
}
