utoipa-gen/tests/snapshots/path_response_derive_test__path_response_default_no_value_nor_ref.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 459
expression: value
---
{
  "operationId": "post_secret",
  "responses": {
    "200": {}
  },
  "summary": "Post some secret inner handler"
}
