utoipa-gen/tests/snapshots/path_response_derive_test__path_response_with_external_ref.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 419
expression: responses
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "$ref": "./MyUser.json"
        }
      }
    }
  }
}
