utoipa-gen/tests/snapshots/path_response_derive_test__path_response_with_inline_ref_type.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 446
expression: responses
---
{
  "200": {
    "content": {
      "application/json": {
        "schema": {
          "properties": {
            "name": {
              "type": "string"
            }
          },
          "required": [
            "name"
          ],
          "type": "object"
        }
      }
    }
  }
}
