utoipa-gen/tests/snapshots/path_response_derive_test__path_response_with_no_schema.snap
---
source: utoipa-gen/tests/path_response_derive_test.rs
assertion_line: 474
expression: value
---
{
  "operationId": "post_secret",
  "responses": {
    "200": {
      "content": {
        "application/octet-stream": {}
      }
    }
  },
  "summary": "Post some secret inner handler"
}
